fix background color

--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -1,10 +1,12 @@
 <app-header>
 </app-header>
-<div class="container" style="margin-top: 60px;">
-  <router-outlet>
-  </router-outlet>
+<div style="min-height:775px; background-color: #F7F7F7">
+  <div class="container" style="margin-top: 60px;">
+    <router-outlet>
+    </router-outlet>
+  </div>
 </div>
-<footer>
+<footer style="background-color: #F7F7F7">
   <div class="container">
     <div class="quick-links">
       <a href="#" class="link-item">ABOUT</a>
