--- a/angular2/src/app/create-deck/create-deck.component.html
+++ b/angular2/src/app/create-deck/create-deck.component.html
@@ -5,7 +5,7 @@
         <div class="left">
           <div class="cover-deck" (click)="coverImgModal.open()" data-whatever="@mdo">
             <div id="preview-img" class="import-cover-deck">
-              <img id="blah" src="#"/>
+              <img id="blah" src="#" style="display: none">
               <div class="img-tog">
                 <div class="change-cover">
                   <p class="ct-text">CHOOSE COVER</p>
