--- a/angular2/src/app/user/settings.component.html
+++ b/angular2/src/app/user/settings.component.html
@@ -20,9 +20,10 @@
                 <label>Name</label><br>
                 <input type="text" name="txt-name" value="{{user.name}}"><br>
                 <label>Username</label><br>
-                <input type="text" name="txt-username"><br>
+                <input type="text" name="txt-username" value="{{user.name}}"><br>
                 <label>Bio</label><br>
-                <input type="text" name="txt-bio"><br>
+                <input type="text" name="txt-bio" value="{{user.bio}}"><br>
+                <button type="button" class="btn-save">save changes</button>
               </div>
               <div class="col-md-3">
                 <div class="avatar">
