--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -20,8 +20,8 @@
             </div>
           </div>
           <div class="favorite">
-            <button (click)="toogleFavorite()" [class.btn-favorited]="favorited" type="button" class="btn btn-outline-success btn-favorite"><i class="fa fa-star-o" aria-hidden="true"></i> FAVORITE</button>
-            <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff;"><i class="fa fa-external-link" aria-hidden="true" style="color: #32cdff;"></i></button>
+            <button (click)="toogleFavorite()" [class.btn-favorited]="favorited" type="button" class="btn btn-outline-success btn-favorite" style="border-radius: 10px"><i class="fa fa-star-o" aria-hidden="true"></i> FAVORITE</button>
+            <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff; border-radius: 10px"><i class="fa fa-external-link" aria-hidden="true" style="color: #32cdff;"></i></button>
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
             <div class="list-lesson">
               <div class="row">
                 <div *ngFor= "let lesson of lessons">
-                  <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+                  <div class="col-md-3" style="margin-bottom: 20px">
                     <div class="item-lesson">
                       <form [formGroup]="myFormLesson" novalidate (click)="click_lesson(lesson.id, myFormLesson)">
                         <img src="./assets/images/lesson.png" alt="lesson">
