--- a/angular2/src/app/user/login.component.css
+++ b/angular2/src/app/user/login.component.css
@@ -3,6 +3,11 @@
   margin-top: 40px;
   padding: 35px;
   border-radius: 20px;
+  background-color: #fff;
+  height: 500px;
+}
+.login-form button {
+  outline: none;
 }
 
 .login-form-label {
