--- a/angular2/src/app/user/signup.component.html
+++ b/angular2/src/app/user/signup.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
     <div class="card login-form shadow-nohover">
-      <h2 class="text-center login-form-label">Create your account</h2>
+      <h2 class="text-center login-form-label" style="margin-top: 3px; margin-bottom: 16px">Create your account</h2>
       <div class="text-center">
         Already have an account?
         <a href="#" [routerLink]="['/login']" class="link-custome">Login</a>
       </div>
 
-      <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
+      <form name="form" style="margin-top: 30px" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
         <div class="form-group">
           <label for="email">Email address</label>
           <input type="text" autofocus="true" name="email" class="form-control" placeholder="Enter email"
