--- a/angular2/src/app/user/user.component.html
+++ b/angular2/src/app/user/user.component.html
@@ -3,7 +3,7 @@
     <div class="row text-center user-profile">
       <div class="col-xs-12 col-md-3 user-profile-info">
         <div class="col-xs-12">
-          <img src="./assets/images/avatar.png" class="user-profile-avatar" alt="Default avatar">
+          <img src="{{user.avatar.url}}" onError="this.src='./assets/images/avatar.png';" class="user-profile-avatar" alt="Default avatar">
         </div>
         <div class="col-xs-12">
           <div class="col-12 user-profile-name">
@@ -18,6 +18,7 @@
             </div>
           </div>
           <div class="profile-device"></div>
+          <div style="font-style: italic;">{{user.bio}}</div>
         </div>
 
         <div *ngIf="user.id == current_user.user_id" class="col-xs-12 profile-setting">
