--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -16,7 +16,9 @@
               </a>
             </div>
             <div class="name">
-              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck">{{deck.title}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i> 4 </a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
             </div>
           </div>
         </div>
@@ -36,7 +38,9 @@
               </a>
             </div>
             <div class="name">
-              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck">{{deck.title}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i> 4 </a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
             </div>
           </div>
         </div>
@@ -55,7 +59,9 @@
               </a>
             </div>
             <div class="name">
-              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck">{{deck.title}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i> 4 </a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
             </div>
           </div>
         </div>
