--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -21,7 +21,12 @@
           </div>
           <div class="favorite">
             <button (click)="toogleFavorite()" [class.btn-favorited]="favorited" type="button" class="btn btn-outline-success btn-favorite" style="border-radius: 10px"><i class="fa fa-star-o" aria-hidden="true"></i> FAVORITE</button>
-            <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff; border-radius: 10px"><i class="fa fa-external-link" aria-hidden="true" style="color: #32cdff;"></i></button>
+            <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff; border-radius: 10px; margin-right: 4px">
+              <i class="fa fa-pencil" aria-hidden="true" style="color: #32cdff;"></i>
+            </button>
+            <button type="button" class="btn btn-outline-success" style="width: 15%; background-color: white;border: 2px solid #32cdff; border-radius: 10px">
+              <i class="fa fa-external-link" aria-hidden="true" style="color: #32cdff;"></i>
+            </button>
           </div>
         </div>
       </div>
