--- a/angular2/src/app/header/header.component.css
+++ b/angular2/src/app/header/header.component.css
@@ -48,7 +48,7 @@ header .header-logo .inner .search .search-form {
   border-radius: 10px;
 }
 header .header-logo .inner .search .search-form input {
-  background-image: url('~/assets/images/searchicon.png');
+  /*background-image: url('~/assets/images/searchicon.png');*/
   background-position: 8px 5px;
   background-repeat: no-repeat;
 }
@@ -59,9 +59,9 @@ header .header-logo .inner .search .search-form .search-input {
   box-sizing: border-box;
   color: #5c5c5c;
   font-size: 15px;
-  height: 42px;
-  padding: 3px 0 0 50px;
-  width: 100%;
+  height: 30px;
+  padding: 3px 0 0 20px;
+  width: 80%;
   font-family: DINNextRoundedLTPro-Medium,sans-serif;
 }
 header .header-logo .inner .search .search-form .search-input:placeholder-shown {
