--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="name">
               <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i> 4 </a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
               <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
             </div>
           </div>
@@ -39,7 +39,7 @@
             </div>
             <div class="name">
               <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i> 4 </a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
               <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
             </div>
           </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="name">
               <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i> 4 </a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
               <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
             </div>
           </div>
