--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -17,8 +17,8 @@
             </div>
             <div class="name">
               <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
             </div>
           </div>
         </div>
@@ -39,8 +39,8 @@
             </div>
             <div class="name">
               <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
             </div>
           </div>
         </div>
@@ -60,8 +60,8 @@
             </div>
             <div class="name">
               <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star"></i>{{deck.favorite_count}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore"></i> {{deck.cards.length}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
+              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
             </div>
           </div>
         </div>
