--- a/angular2/src/app/card/card.component.html
+++ b/angular2/src/app/card/card.component.html
@@ -6,27 +6,21 @@
 		<div class="front-card">
 			<div class="f-deck">
 				<div class="image">
-				<input class="form-control" type="file" formControlName="picture" id="picture" (change)="onFileChange($event)" #fileInput>
-					<!-- <%= f.file_field :picture, style: "width: 100%" %> -->
+					<label type="button"><i class="fa fa-image" style="font-size: 25px; opacity: .6;"></i>
+						<input class="form-control" type="file" formControlName="picture"  style="display: none" id="picture" (change)="onFileChange($event)" #fileInput>
+					</label>
 				</div>
-				<div class="import-cover-deck">
-					<div class="change-cover">
-						<input type="text" formControlName="front" id="front-card-value" class="form-control" placeholder="Front">
-						<!-- <%= f.text_field :front, class: "form-control", id: "front-card-value", placeholder: "Front" %> -->
-					</div>
+				<div style="height: 50%; border-top: 1px solid #eceaea;">
+					<textarea type="text" formControlName="front" id="front-card-value" class="txt-back" placeholder="Front">
+					</textarea>
 				</div>
 			</div>
 		</div>
 		<div class="back-card">
 			<div class="f-deck">
-				<div class="import-cover-deck">
-					<div class="change-cover">
-						<input type="text" formControlName="back" id="back-card-value" class="form-control" placeholder="Back">
-					</div>
-				</div>
+				<textarea type="text" formControlName="back" id="back-card-value" class="form-control txt-back" placeholder="Back">
+				</textarea>
 			</div>
 		</div>
-		<!-- <%= link_to "javascript:void(0)", onclick: "remove_fields(this)" do %> -->
-		<!-- <% end %> -->
 	</div>
 </div>
