--- a/angular2/src/app/deck/deck.component.html
+++ b/angular2/src/app/deck/deck.component.html
@@ -3,69 +3,74 @@
     <h1>Slide</h1>
   </div>
   <div class="favorites">
-    <div class="title">
-      <span class="txt">Your favorites</span>
-    </div>
-    <div class="list-decks-favor">
-      <slick-carousel class="carousel">
-        <div class="slide" *ngFor="let deck of favoriteDecks">
-          <div class="item-deck">
-            <div class="image-cover">
-              <a href ="#" [routerLink]="['/decks', deck.id]">
-                <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
-              </a>
-            </div>
-            <div class="name">
-              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
-            </div>
-          </div>
-        </div>
-      </slick-carousel>
-    </div>
-
-    <div class="title">
-      <span class="txt">People you follow</span>
-    </div>
-    <div class="list-decks-favor">
-      <slick-carousel class="carousel">
-        <div class="slide" *ngFor="let deck of following_people_decks">
-          <div class="item-deck">
-            <div class="image-cover">
-              <a href ="#" [routerLink]="['/decks', deck.id]">
-                <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
-              </a>
-            </div>
-            <div class="name">
-              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
+    <section *ngIf="favoriteDecks.length > 0">
+      <div class="title">
+        <span class="txt">Your favorites</span>
+      </div>
+      <div class="list-decks-favor">
+        <slick-carousel class="carousel">
+          <div class="slide" *ngFor="let deck of favoriteDecks">
+            <div class="item-deck">
+              <div class="image-cover">
+                <a href ="#" [routerLink]="['/decks', deck.id]">
+                  <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
+                </a>
+              </div>
+              <div class="name">
+                <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+                <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
+                <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
+              </div>
             </div>
           </div>
-        </div>
-      </slick-carousel>
-    </div>
-    <div class="title">
-      <span class="txt">Trending</span>
-    </div>
-    <div class="list-decks-favor">
-      <slick-carousel class="carousel">
-        <div class="slide" *ngFor="let deck of trending_decks">
-          <div class="item-deck">
-            <div class="image-cover">
-              <a href ="#" [routerLink]="['/decks', deck.id]">
-                <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
-              </a>
-            </div>
-            <div class="name">
-              <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
-              <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
+        </slick-carousel>
+      </div>
+    </section>
+    <section *ngIf="following_people_decks.length > 0">
+      <div class="title">
+        <span class="txt">People you follow</span>
+      </div>
+      <div class="list-decks-favor">
+        <slick-carousel class="carousel">
+          <div class="slide" *ngFor="let deck of following_people_decks">
+            <div class="item-deck">
+              <div class="image-cover">
+                <a href ="#" [routerLink]="['/decks', deck.id]">
+                  <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
+                </a>
+              </div>
+              <div class="name">
+                <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+                <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
+                <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
+              </div>
             </div>
           </div>
-        </div>
-      </slick-carousel>
-    </div>
+        </slick-carousel>
+      </div>
+    </section>
+    <section *ngIf="trending_decks.length > 0">
+      <div class="title">
+        <span class="txt">Trending</span>
+      </div>
+      <div class="list-decks-favor">
+        <slick-carousel class="carousel">
+          <div class="slide" *ngFor="let deck of trending_decks">
+            <div class="item-deck">
+              <div class="image-cover">
+                <a href ="#" [routerLink]="['/decks', deck.id]">
+                  <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
+                </a>
+              </div>
+              <div class="name">
+                <a href="#" [routerLink]="['/decks', deck.id]" class="name-deck" style="display: block">{{deck.title}}</a>
+                <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-star" style="margin-right: 5px"></i>{{deck.favorite_count}}</a>
+                <a href="#" [routerLink]="['/decks', deck.id]" class="number"><i class="fa fa-window-restore" style="margin-right: 5px"></i> {{deck.cards.length}}</a>
+              </div>
+            </div>
+          </div>
+        </slick-carousel>
+      </div>
+    </section>
   </div>
 </div>
